demos/onecommute/force-app/main/default/objects/OneCommute_Employer__c/OneCommute_Employer__c.object-meta.xml
<CustomObject>
    <description>OneCommute demo employer/tenant participating in a site commuter survey.</description>
    <label>OneCommute Employer</label>
    <nameField>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneCommute Employers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>