demos/onecommute/force-app/main/default/objects/OneCommute_Employer__c/fields/Response_Count__c.field-meta.xml
<CustomField>
    <fullName>Response_Count__c</fullName>
    <label>Response Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>