demos/onecommute/force-app/main/default/objects/OneCommute_Employer__c/fields/Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Response_Rate__c</fullName>
    <formula>IF(Employee_Count__c = 0, 0, Response_Count__c / Employee_Count__c)</formula>
    <label>Response Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>