demos/onecommute/force-app/main/default/objects/OneCommute_Employer__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>OneCommute_Site__c</referenceTo>
    <relationshipLabel>Employers</relationshipLabel>
    <relationshipName>Employers</relationshipName>
    <type>Lookup</type>
</CustomField>