demos/onecommute/force-app/main/default/objects/OneCommute_Employer__c/listViews/High_Response_Rate.listView-meta.xml
<ListView>
    <fullName>High_Response_Rate</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Employee_Count__c</columns>
    <columns>Response_Count__c</columns>
    <columns>Response_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Response_Rate__c</field>
        <operation>greaterOrEqual</operation>
        <value>70</value>
    </filters>
    <label>High Response Rate</label>
</ListView>