demos/onecommute/force-app/main/default/objects/OneCommute_Employer__c/listViews/Largest_Employers.listView-meta.xml
<ListView>
    <fullName>Largest_Employers</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Employee_Count__c</columns>
    <columns>Response_Count__c</columns>
    <columns>Response_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Largest Employers</label>
</ListView>